made decision letter response less light

--- a/nature_sci_rep/submission2/supervenience.tex
+++ b/nature_sci_rep/submission2/supervenience.tex
@@ -130,11 +130,7 @@ This philosophical conjecture has potentially widespread implications.
 % The determination of supervenience (or lack thereof) of minds on brains has potentially important implications in 
 % a number of fields of inquiry.  
 For example, neural network theory and artificial intelligence often implicitly assume 
-% take a generalized notion of 
-a local version mind-brain supervenience 
-% as an assumption 
-% , which if falsified, might change modern approaches to learning 
-\cite{Haykin2008,Ripley2008}. Cognitive neuroscience similarly seems to operate under such assumptions
+a local version mind-brain supervenience \cite{Haykin2008,Ripley2008}. Cognitive neuroscience similarly seems to operate under such assumptions
 % , which if falsified, might result in novel perspectives and theories 
 \cite{Gazzaniga2008}.  Philosophers continue to debate and refine notions of supervenience 
 % And the question of mind-brain supervenience continues to be debated amongst philosophers 
